# flits-editor

./: .gitignore  Cargo.toml  Cross.toml  README.md  about.hbs  about.toml  build.rs  release.sh
core/: Cargo.toml
core/src/: core.rs  main.rs
core/src/core/: export.rs  run.rs
core/src/core/export/: as2.rs  audio.rs  bitmap.rs  font.rs  movieclip.rs  text_field.rs
core/src/core/export/font/: debug.rs
desktop/: Cargo.toml
desktop/src/: app.rs  cli.rs  custom_event.rs  main.rs  player.rs  state.rs  welcome.rs
editor/: Cargo.toml
editor/src/: camera.rs  custom_event.rs  edit.rs  editor-old.rs  editor.rs  edits.rs  lib.rs  main.rs  menu.rs  message.rs  message_bus.rs  properties_panel.rs  run_ui.rs  text_rendering.rs  undo.rs
editor/src/desktop/: README.md  app.rs  custom_event.rs  executor.rs  gui.rs
editor/src/desktop/gui/: movie.rs
editor/src/editor/: breadcrumb_bar.rs  camera.rs  error_window.rs  library.rs  menu_bar.rs  new_symbol_window.rs  properties_panel.rs  properties_panel2.rs  stage.rs
editor/src/editor/stage/: camera.rs
example/: .gitignore  movie.json
example/assets/: README.md
example/src/: Mp3Button.as  SoundButton.as  WavButton.as
font-to-swf/: Cargo.toml
font-to-swf/src/: debug.rs  font_to_swf.rs  lib.rs  main.rs
font-to-swf/src/debug/: comparison_swf.rs  swfmill.rs
src/: app.rs  cli.rs  core.rs  custom_event.rs  desktop.rs  editor.rs  executor.rs  gui.rs  main.rs  player.rs  task.rs  util.rs
src/core/: export.rs
src/core/export/: as2.rs  audio.rs  bitmap.rs  movieclip.rs  preloader.rs
src/desktop/: app.rs  custom_event.rs  gui.rs  player.rs  util.rs
src/desktop/gui/: controller.rs  movie.rs
src/editor/: camera.rs  edit.rs  main.rs  menu.rs  mod.rs  new_symbol_window.rs  output_window.rs  player.rs  properties_panel.rs
src/gui/: controller.rs
text-rendering/: Cargo.toml  README.md
text-rendering/src/: compat.rs  edit_text.rs  font.rs  font_map.rs  html.rs  lib.rs  sandbox.rs  string.rs  tag_utils.rs
text-rendering/src/html/: layout.rs  style_sheet.rs  text_format.rs
text-rendering/src/string/: avm_string.rs  common.rs  context.rs  interner.rs  repr.rs
windowing/: Cargo.toml  README.md
windowing/examples/: simple.rs
windowing/src/: blit.wgsl  controller.rs  interface.rs  lib.rs  movie.rs  window.rs
