[package]
name = "flits-editor"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
# don't publish to crates.io, needed to avoid cargo-about generating an incorrect license
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# core dependencies
flate2 = {version = "1.0"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
swf = { git = "https://github.com/ruffle-rs/ruffle" }
image = "0.24.6"
hound = "3.5.1"
puremp3 = "0.1.0"
typed-arena = "2.0.2"

# editor dependencies
undo = "0.51.0"

# gui dependencies
clap = { version = "4.5.18", features = ["derive"] }
egui = "0.29.0"
egui-wgpu = { version = "0.29.0", features = ["winit"] }
egui-winit = "0.29.0"
ruffle_render = { git = "https://github.com/ruffle-rs/ruffle", features = ["clap"] }
ruffle_render_wgpu = { git = "https://github.com/ruffle-rs/ruffle", features = ["clap"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
generational-arena = "0.2.8"
tracing = "0.1.40"
winit = "0.30.5"
webbrowser = "0.8.10"
url = "2.5.2"
#arboard = "3.2.0"
dirs = "5.0"
#isahc = "1.7.2"

# we can't use the xdg-portal version because it doesn't support message boxes
rfd = { version = "0.15.0",  default-features = false, features = ["gtk3"] }

anyhow = "1.0"
bytemuck = "1.18.0"
os_info = { version = "3", default-features = false }
unic-langid = "0.9.5"
sys-locale = "0.3.1"
wgpu = { version = "22.1.0" }
futures = "0.3.30"
chrono = { version = "0.4.38", default-features = false, features = [] }
fluent-templates = "0.11.0"

# Deliberately held back to match tracy client used by profiling crate
tracing-tracy = { version = "=0.11.1", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[build-dependencies]
embed-resource = "2"
vergen = { version = "8.2.0", features = ["build", "git", "gitcl", "cargo"] }

[profile.release]
panic = "abort"
