[workspace]
members = [
  "core",
  # in the middle of a refactor, editor doesn't work for now
  #"editor"
]
#default-members = ["editor"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
# don't publish to crates.io, needed to avoid cargo-about generating an incorrect license
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
swf = { git = "https://github.com/ruffle-rs/ruffle" }

[profile.release]
panic = "abort"
