[workspace]
members = [
  "core",
  "desktop",
  "windowing",
]
default-members = ["desktop"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
# don't publish to crates.io, needed to avoid cargo-about generating an incorrect license
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
swf = { git = "https://github.com/ruffle-rs/ruffle" }

anyhow = "1.0"
winit = "0.30.10"
wgpu = "24.0.3"
egui = "0.31.1"
ruffle_render = { git = "https://github.com/ruffle-rs/ruffle", features = ["clap"] }
ruffle_render_wgpu = { git = "https://github.com/ruffle-rs/ruffle", features = ["clap"] }

[profile.release]
panic = "abort"
