[package]
name = "flits-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
font-to-swf  = { path = "../font-to-swf" }

flate2 = {version = "1.1.1"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
swf = { workspace = true }
image = "0.25.6"
hound = "3.5.1"
puremp3 = "0.1.0"
typed-arena = "2.0.2"
duct = "0.13.7"
