[package]
name = "flits-editor-lib"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
flits-core = { path = "../core" }
flits-text-rendering = { path = "../text-rendering" }

swf = { workspace = true }
winit = { workspace = true }
egui = { workspace = true }
ruffle_render = { workspace = true }
tracing = { workspace = true }

undo = "0.51.0"
ansi-parser = "0.9.1"
