[package]
name = "flits-text-rendering"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
swf = { workspace = true }
ruffle_wstr = { git = "https://github.com/ruffle-rs/ruffle" }
ruffle_render = { workspace = true }
quick-xml = "0.37.5"
gc-arena = { git = "https://github.com/kyren/gc-arena.git", rev = "08e08414249d5914dfc3b402d7eadc133e00ce56" }
fnv = "1.0.7"
hashbrown = { version = "0.14.5", features = ["raw"] }
thiserror = "2.0.16"
tracing = { workspace = true }
url = "2.5.2"