[package]
name = "windowing"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
winit = { workspace = true }
anyhow = { workspace = true }
wgpu = { workspace = true }
egui = { workspace = true }
egui-winit = "0.31.1"
egui-wgpu = { version = "0.31.1", features = ["winit"] }
ruffle_render = { workspace = true }
ruffle_render_wgpu = { workspace = true }
futures = "0.3.31"
tracing = { workspace = true }
bytemuck = "1.23.0"

[dev-dependencies]
# for the simple example, we need swf::Color
swf = { workspace = true }